Updating with SVN changes

--- a/webui.htd/menu-template.html
+++ b/webui.htd/menu-template.html
@@ -45,6 +45,12 @@
         <li class="sub"><a href="<TMPL_VAR NAME=main_cgi_url>?section=AllPwayBrowser&page=allPwayBrowser"> <img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/binocular.png"/> Search Pathways</a></li>
 
 
+
+
+      <li class="sub"><a href="https://img.jgi.doe.gov/abc" title='Secondary Metabolism in IMG ABC Data Mart'>&nbsp;Secondary Metabolism</a>
+      </li>
+
+
         <li class="sub2"><a href="<TMPL_VAR NAME=main_cgi_url>?section=FindFunctions&page=ffoAllCogCategories"><img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/cog.png"/>&nbsp;COG<img class="subarrow"  src="<TMPL_VAR NAME=base_url>/images/ArrowNav.gif"/></a>
           <ul>
             <li class="sub3"><a href="<TMPL_VAR NAME=main_cgi_url>?section=FindFunctions&page=ffoAllCogCategories">COG Browser</a> </li>
@@ -305,12 +311,12 @@
     <li class="rightmenu2"><a href="https://img.jgi.doe.gov/"> Data Marts </a>
       <ul>
 
-        <li class="sub" title="IMG"><a href="/m"><img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/img_ico.png"/> IMG</a></li>
-        <li class="sub" title="IMG ER"><a href="/mer"><img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/img_m_ico.png"/> IMG ER</a></li>
+        <li class="sub" title="IMG only public data"><a href="/m"><img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/img_ico.png"/> IMG</a></li>
+        <li class="sub" title="IMG ER Expert Review"><a href="/mer"><img class="menuimg" src="<TMPL_VAR NAME=base_url>/images/img_m_ico.png"/> IMG ER</a></li>
         
-        <li class="sub" title="IMG ABC"><a href="/abc"> IMG ABC</a></li>
+        <li class="sub" title="IMG ABC biosynthetic gene clusters and novel secondary metabolites"><a href="/abc"> IMG ABC</a></li>
         <li class="sub" title="Human Microbiome Project Metagenome"><a href="https://img.jgi.doe.gov/cgi-bin/imgm_hmp/main.cgi"> IMG HMP</a></li>
-        <li class="sub" title="IMG EDU"><a href="/edu"> IMG EDU</a></li>
+        <li class="sub" title="IMG EDU Education"><a href="/edu"> IMG EDU</a></li>
         <li class="sub" title="Data set submission"><a href="<TMPL_VAR NAME=img_submit_url>"> <img class="menuimg" src="<TMPL_VAR NAME=base_url>/favicon.ico"/> Submit Data Set</a></li>
       </ul>
     </li>
