--- a/webui.htd/aniSameSpecies.html
+++ b/webui.htd/aniSameSpecies.html
@@ -50,7 +50,7 @@ div.tooltip {
 
 <h1>ANI Same Species Plot</h1>
 
-<p>
+<!--
 Please select the type of points to plot:<br/>
 <input id="type1" type="radio" style="vertical-align: text-bottom;"
        value="af-ani" name="pt_type" checked/>
@@ -58,13 +58,13 @@ ANI1 vs. AF1 and ANI2 vs.AF2
 <input id="type2" type="radio" style="vertical-align: text-bottom;"
        value="final" name="pt_type" />Final ANI vs. Final AF
 <br/><br/>
+  -->
 
 Please select no more than 10 species to analyze the genomes in each species using pairwise ani:<br/>
 Domain: <select id="kingdom" onchange="fetchSpecies('<TMPL_VAR NAME=top_base_url>cgi-bin/species.cgi')">
   <option value="none" selected>- Select -</option>
   <option value="Arc">Archea</option>
   <option value="Bac">Bacteria</option>
-  <option value="Euk">Eukaryota</option>
 </select>&nbsp;&nbsp;&nbsp;
 
 Species: <select id="species"></select>
@@ -74,12 +74,23 @@ Species: <select id="species"></select>
 <br/>
 <input type="button" class="img" onclick="clearSpecies()" value="Clear">
 <input type="button" class="img" onclick="plotSpecies('<TMPL_VAR NAME=cgi_url>/xml.cgi?section=ANI&page=plotSameSpeciesPairwise')" value="Plot">
+<br/>
+<br/>
 <table id="species_to_plot"></table>
 </p>
 
 <div  class="plot">
   <svg id="svg1" width="640" height="480"/>
 </div>
+
+<br/>
+<br/>
+<h2>Set of Selected Genomes from Plot</h3>
+<form method="post" action="main.cgi" enctype="multipart/form-data" name="mainForm">
+<table id="clicked_genomes"></table>
+<input class="meddefbutton" type="submit" value="Add Selected to Genome Cart" name="setTaxonFilter"/>
+</form>
+
 
 <script src="<TMPL_VAR NAME=base_url>/js/d3.min.js"></script>
 <script src="<TMPL_VAR NAME=base_url>/js/AniPlotter.js"></script>
