Header, form and style guide changes.

--- a/proportal/public/styleGuide/index.html
+++ b/proportal/public/styleGuide/index.html
@@ -45,7 +45,10 @@
 
 <body>
 
+
+
 <div id="header"><h2 class="sg"> PP Style Guide </h2></div>
+
 
 <div id="wrap">
 
@@ -54,7 +57,10 @@
 	<ul class="nav_sg">
 		<li><a href="#typography">Typography</a></li>
 		<li><a href="#colors">Colors</a></li>
-		<li><a href="#buttons">Buttons</a></li>
+		<li><a href="#forms">Forms</a></li>
+			<ul>
+				<li><a href="#buttons">Buttons</a></li>
+			</ul>	
 		<li><a href="#navigation">Navigation</a></li>
 			<ul>
 				<li><a href="#nav_tabs">Tabs</a></li>
@@ -64,7 +70,7 @@
 
 </div> <!-- sidebar -->
 
-
+	
 <div id="main">
 
 
@@ -152,6 +158,7 @@
 	
 </section>
 
+<section id="forms">
 	
 <section id="buttons">
 	<h3 class="sg underline_sg"> Buttons </h3>
@@ -159,14 +166,13 @@
 	<br><br>
 	
 	
-	<button class="pp_btn_std"> Standard </button>
-	<button class="pp_btn_orange"> Orange Button </button>
-	<button class="pp_btn_disabled"> Disabled </button>
+	<button class="pp-button"> Standard Button </button>
+	<button class="pp-button blue"> Blue Button </button>
+	<button class="pp-button disabled"> Disabled </button>
 	<p class="sg"> Various button colors with a solid background.</p>
 
-	<button class="pp_btn_std_outline"> Standard </button>
-	<button class="pp_btn_orange_outline"> Orange Button </button>
-	<button class="pp_btn_disabled_outline"> Disabled </button>
+	<button class="pp-button outline"> Standard Outline </button>
+	<button class="pp-button blue-outline"> Blue Outline </button>
 	<p class="sg"> Various buttons styled with a color outline.</p>
 	
 	<button class="pp_btn_std_outline"> Add to Cart </button>
@@ -192,6 +198,8 @@
 	</table>
 		
 </section>	
+
+</section>	<!-- forms -->
 
 <section id="navigation">
 	<h3 class="sg underline_sg"> Navigation </h3>
@@ -328,14 +336,23 @@
 
 </section>
 
+
+
+
+
 </div> <!-- main -->
+	
+	
+</div>
+
 
 
 <div id="footer">
 	
 </div>
 
-</div>	<!-- wrap -->
+
+<!-- </div>	<!~~ wrap ~~> -->
 
 
 </body>
