Updating to .test as .dev no longer recommended as development domain

--- a/proportal/prerequisites/d3.chart.img/example/forms.html
+++ b/proportal/prerequisites/d3.chart.img/example/forms.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>d3.chart.form.js</title>
-	<link rel="stylesheet" type="text/css" href="http://img-proportal.dev/css/proportal.css">
-	<link rel="stylesheet" type="text/css" href="http://img-proportal.dev/d3/lib/colorbrewer/colorbrewer.css">
+	<link rel="stylesheet" type="text/css" href="http://img-proportal.test/css/proportal.css">
+	<link rel="stylesheet" type="text/css" href="http://img-proportal.test/d3/lib/colorbrewer/colorbrewer.css">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,12 +26,12 @@
 
 
 	</div>
-<script src="http://img-proportal.dev/node_modules/d3/d3.js"></script>
-<script src="http://img-proportal.dev/d3-tip/index.js"></script>
-<script src="http://img-proportal.dev/node_modules/d3.chart/d3.chart.js"></script>
-<script src="http://img-proportal.dev/d3.chart.tooltips/d3.chart.tooltip.js"></script>
-<script src="http://img-proportal.dev/js/d3.chart.form.js"></script>
-<script src="http://img-proportal.dev/d3/lib/colorbrewer/colorbrewer.js"></script>
+<script src="http://img-proportal.test/node_modules/d3/d3.js"></script>
+<script src="http://img-proportal.test/d3-tip/index.js"></script>
+<script src="http://img-proportal.test/node_modules/d3.chart/d3.chart.js"></script>
+<script src="http://img-proportal.test/d3.chart.tooltips/d3.chart.tooltip.js"></script>
+<script src="http://img-proportal.test/js/d3.chart.form.js"></script>
+<script src="http://img-proportal.test/d3/lib/colorbrewer/colorbrewer.js"></script>
 <script src="forms.js"></script>
 </body>
 </html>
