--- a/proportal/prerequisites/d3.chart.img/example/table.html
+++ b/proportal/prerequisites/d3.chart.img/example/table.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>D3.chart Base Example</title>
-	<link rel="stylesheet" type="text/css" href="http://img-proportal.dev/css/proportal.css">
-	<link rel="stylesheet" type="text/css" href="http://img-proportal.dev/d3/lib/colorbrewer/colorbrewer.css">
+	<link rel="stylesheet" type="text/css" href="http://img-proportal.test/css/proportal.css">
+	<link rel="stylesheet" type="text/css" href="http://img-proportal.test/d3/lib/colorbrewer/colorbrewer.css">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
@@ -28,10 +28,10 @@
 	<div id="table">
 	</div>
 </div>
-<script type="text/javascript" src="http://img-proportal.dev/node_modules/d3/d3.min.js"></script><script type="text/javascript" src="http://img-proportal.dev/d3-tip/index.js"></script><script type="text/javascript" src="http://img-proportal.dev/node_modules/element-resize-detector/dist/element-resize-detector.min.js"></script><script type="text/javascript" src="http://img-proportal.dev/node_modules/d3.chart/d3.chart.js"></script><script type="text/javascript" src="http://img-proportal.dev/d3.chart.base/d3.chart.base-ext.js"></script>
-	<script src="http://img-proportal.dev/d3.chart.tooltips/d3.chart.tooltip.js"></script>
+<script type="text/javascript" src="http://img-proportal.test/node_modules/d3/d3.min.js"></script><script type="text/javascript" src="http://img-proportal.test/d3-tip/index.js"></script><script type="text/javascript" src="http://img-proportal.test/node_modules/element-resize-detector/dist/element-resize-detector.min.js"></script><script type="text/javascript" src="http://img-proportal.test/node_modules/d3.chart/d3.chart.js"></script><script type="text/javascript" src="http://img-proportal.test/d3.chart.base/d3.chart.base-ext.js"></script>
+	<script src="http://img-proportal.test/d3.chart.tooltips/d3.chart.tooltip.js"></script>
 
-	<script src="http://img-proportal.dev/js/d3.chart.table.js"></script>
+	<script src="http://img-proportal.test/js/d3.chart.table.js"></script>
 	<script src="table.js"></script>
 	</body>
 </html>
